--- a/lab2.2/styles.css
+++ b/lab2.2/styles.css
@@ -3,5 +3,12 @@
     /* background-color: black;  */
 }
 .content {
-    margin-top: 17.5%
+    margin-top: 17.5%;    
+    border: 2px double white;
+    /* background:; */
+    padding: 1px;
+    max-width:min-content;
+    margin-left: 40%;
+    margin-right: 40%;
+
 }
