--- a/lab3.1/styles.css
+++ b/lab3.1/styles.css
@@ -3,10 +3,10 @@ body {
     box-sizing: border-box;
 }
 *, *::before, *::after{
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 .header {
-    background-color: brown;
+    background-color: rgb(138, 44, 138);
 
     border-bottom: 5px solid black ;
     padding: 20px 0;
@@ -26,13 +26,13 @@ body {
 }
 .navigation a, .profile a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
     text-transform: uppercase;
 
 }
 .main {
-    background-color: cadetblue;
+    background-color: rgb(255, 255, 255);
     padding-top: 1px;
     padding-bottom: 1px;
 }
@@ -53,6 +53,7 @@ body {
     padding: 20px 20px 20px 0px;
     width: 200px;
     float: left;
+    position: sticky;
 }
 .navigation{
     float: left;
@@ -73,10 +74,11 @@ body {
     margin-left: 220px;
 }
 .productCard{
+    display: inline-block;
     width: 500px;
     height: 350px;
-    background-color: crimson;
-    border: 2px solid red;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(41, 41, 41);
     margin-bottom: 20px;
     border-radius: 2px;
 }
@@ -109,7 +111,55 @@ body {
     height: 65%;
     overflow: hidden;
 }
-.productDetails .controls{
+
+.btn{
+    border: none;
+    
+}
+.controls{
     text-align: center;
+}
+.productDetails .controls .btn .price {
+    background-color: rgb(56, 56, 56);
+    
+}
+.productDetails .controls .btn .buy{
+    background-color: rgb(138, 44, 138);
+    
+}
+.productDetails .controls .btn .buy:hover{
+    background-color: rgb(99, 31, 99);
+}
+.menu span:hover{
+    background-color: rgb(99, 31, 99);
+}
+.btn .price{
+    text-align: left;
+    
+}
+.btn .buy{
+    padding-left: 3px;
+    padding-right: 3px;
+}
+.productDetails .btn span {
+    padding: 4px 7px;
+    display: inline;
+    font-size: 0.7rem;
+    color: white;
+}
+button{
+    background: none;
+}
+.profile:hover{
+    background-color: rgb(99, 31, 99);
+}
+.footer{
+    display: block;
+    background-color: rgb(138, 44, 138);
+    border-top: 5px solid black;
+    text-align: left;
+    padding: 20px 0;
+    position: relative;
+    z-index: 9999;
     
 }
