--- a/lab3.1/styles.css
+++ b/lab3.1/styles.css
@@ -158,8 +158,10 @@ button{
     background-color: rgb(138, 44, 138);
     border-top: 5px solid black;
     text-align: left;
-    padding: 20px 0;
-    position: relative;
-    z-index: 9999;
-    
+    padding: 5px 0;
+    width: 100%;
+
+    position: fixed;
+    left: 0;
+    bottom: 0; 
 }
